# pyopensci-scipy25-create-python-package

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: test.yml
docs/: conf.py  index.md
myvenv/: pyvenv.cfg
src/pyospackage_whh4/: __init__.py  example.py
tests/unit/: test_example.py
